--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div style="text-align:center;">
-        <h1 style="font-style: italic;font-family:Georgia, 'Times New Roman', Times, serif;">Tom And Jerry</h1>
+        <h1 style="font-style: italic;font-family:Georgia, 'Times New Roman', Times, serif;text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Tom And Jerry</h1>
     <video src="Tom n Jerry.mp4" autoplay controls style="border:4px solid yellow;border-radius:20px;;"></video>
     <br>
     <button style="background-color: cyan; height:50px; width:200px;text-align:center;">
