--- a/index.html
+++ b/index.html
@@ -4,13 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        div{
+            text-align:center;
+        }
+        h1{
+            font-style: italic;
+            font-family:Georgia, 'Times New Roman', Times, serif;
+            text-shadow: 1px 1px 2px white, 0 0 25px red, 0 0 5px yellow;
+            color:tomato;
+            font-size: 50px;
+        }
+        video{
+            border:4px solid yellow;
+            border-radius:20px;
+        }
+        button{
+            background-color: cyan;
+            height:50px;
+            width:200px;
+            text-align:center;
+        }
+    </style>
 </head>
 <body>
-    <div style="text-align:center;">
-        <h1 style="font-style: italic;font-family:Georgia, 'Times New Roman', Times, serif;text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 5px darkblue;">Tom And Jerry</h1>
-    <video src="Tom n Jerry.mp4" autoplay controls style="border:4px solid yellow;border-radius:20px;;"></video>
+    <div>
+        <h1>Tom And Jerry</h1>
+    <video src="Tom n Jerry.mp4" autoplay controls ></video>
     <br>
-    <button style="background-color: cyan; height:50px; width:200px;text-align:center;">
+    <button >
     <a href="Tom n Jerry.mp4" download="Tom and Jerry.mp4">Download From Here</a>
     </button>
     </div>
